k8s/sos-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sos-service
  namespace: helep
spec:
  selector:
    app: sos-service
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
