k8s/sos-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sos-service-netpol
  namespace: helep
spec:
  podSelector:
    matchLabels:
      app: sos-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8002
    - from:
        - podSelector: {}
      ports:
        - port: 8002
  egress:
    - to:
        - podSelector:
            matchLabels:
              strimzi.io/name: kafka-cluster-kafka
      ports:
        - port: 9092
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
